--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&display=swap");
-/* font-family: "Azeret Mono", monospace; */
 
 * {
   font-family: "Azeret Mono", monospace;
@@ -62,5 +61,76 @@
   border: none;
   border-radius: 8px;
   margin-bottom: 44px;
+  cursor: pointer;
+}
+
+/* web section */
+
+.Web-Dev {
+  width: 1140px;
+  margin: 0 auto;
+  border-radius: 16px;
+  padding: 80px 97px 80px 97px;
+  background: rgba(13, 19, 33, 0.02);
+  margin-bottom: 80px;
+}
+
+.web-container {
+  width: 946px;
+  margin: 0 auto;
+}
+
+.text-container {
+  margin-bottom: 48px;
+}
+.text-container > h1 {
+  margin-bottom: 24px;
+}
+
+.contain-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  padding: 48px;
+  border-radius: 16px;
+
+  background: linear-gradient(
+    90deg,
+    rgb(255, 255, 255),
+    rgba(255, 255, 255, 0) 100%
+  );
+  margin-bottom: 80px;
+}
+
+.text {
+  width: 50%;
+}
+
+.contain-title {
+  font-size: 24px;
+  font-weight: 700;
+  color: rgba(13, 19, 33, 0.7);
+  margin-bottom: 16px;
+}
+
+.contain-sub-title {
+  color: rgb(13, 19, 33, 0.7);
+  font-size: 16px;
+  font-weight: 400;
+  margin-bottom: 32px;
+}
+
+.contain-container img {
+  max-width: 260px;
+}
+
+.contain-container button {
+  padding: 12px 20px;
+  border: 1px solid rgb(13, 19, 33);
+  opacity: 0.7;
+  color: rgb(13, 19, 33);
+  font-weight: 600;
+  font-size: 20px;
   cursor: pointer;
 }
