--- a/style/style.css
+++ b/style/style.css
@@ -10,10 +10,16 @@
   text-align: center;
 }
 
+.section-center {
+  width: 1140px;
+  margin: 0 auto;
+}
+
 .section-title {
   font-size: 48px;
   font-weight: 800;
   color: rgb(13, 19, 33);
+  margin-bottom: 24px;
 }
 
 .section-sub-title {
@@ -67,8 +73,6 @@
 /* web section */
 
 .Web-Dev {
-  width: 1140px;
-  margin: 0 auto;
   border-radius: 16px;
   padding: 80px 97px 80px 97px;
   background: rgba(13, 19, 33, 0.02);
@@ -82,9 +86,6 @@
 
 .text-container {
   margin-bottom: 48px;
-}
-.text-container > h1 {
-  margin-bottom: 24px;
 }
 
 .contain-container {
@@ -133,4 +134,19 @@
   font-weight: 600;
   font-size: 20px;
   cursor: pointer;
+}
+
+/* Inspiration */
+
+.inspiration {
+  margin-bottom: 149px;
+}
+
+.video {
+  width: 100%;
+  height: 550px;
+  background: rgb(255, 255, 255);
+  padding: 32px;
+  border: 1px solid rgba(13, 19, 33, 0.2);
+  border-radius: 16px;
 }
