added the target-section

--- a/style/style.css
+++ b/style/style.css
@@ -150,3 +150,55 @@
   border: 1px solid rgba(13, 19, 33, 0.2);
   border-radius: 16px;
 }
+
+/* Target */
+.targets {
+  margin-bottom: 111px;
+}
+
+.skills {
+  display: flex;
+  gap: 24px;
+}
+
+.skill {
+  padding: 40px;
+  width: 364px;
+}
+
+.skill img {
+  margin-bottom: 24px;
+}
+
+.skill-title {
+  font-weight: 800;
+  font-size: 24px;
+  color: rgb(13, 19, 33);
+  margin-bottom: 8px;
+}
+
+.skill-description {
+  font-weight: 400;
+  color: rgb(13, 19, 33, 0.7);
+  margin-bottom: 24px;
+}
+
+.learn-more {
+  font-weight: 700;
+  text-decoration: underline;
+}
+
+.html {
+  border-radius: 16px;
+  background: rgba(255, 76, 30, 0.05);
+}
+
+.css {
+  border-radius: 16px;
+  background: rgba(0, 76, 232, 0.05);
+}
+
+.js {
+  border-radius: 16px;
+  background: rgba(255, 223, 0, 0.05);
+}
